Fixed some alignment
todo: projects and skills

--- a/css/style.css
+++ b/css/style.css
@@ -763,10 +763,21 @@ div {
 }
 .timeline {
     float:right;
-    width: 400px;
+    width: 600px;
     background-color:white;
 }
+.timeline h2  {
+    font: bold 20px/50px 'Oswald';
+    color: #ff3300;
+    text-transform: uppercase;
+    border-bottom: 6px solid #ff3300;
+    height: 50px;
+    text-align: right; 
+    width: 290px;    
+    float:right; }
 .timeline .timeline-item {
+    padding-top:3em;
+    float:right;
     width: 100%;
 }
 .timeline .timeline-item .info, .timeline .timeline-item .year {
@@ -786,7 +797,8 @@ div {
 .timeline .timeline-item .year {
     font-size: 24px;
     font-weight: bold;
-    width: 22%;
+    width: 15%; 
+    margin-right: 1px;   
 }
 .timeline .timeline-item .info {
     color: #444;    
@@ -880,51 +892,65 @@ div {
     font: 12px Arial;
     color: #202020;  
 }
+
+
 /***Description****/
-.description
+.description h1 {
+    font: bold 20px/50px 'Oswald';
+    color: #ff3300;
+    text-transform: uppercase;
+    border-bottom: 6px solid #ff3300;
+    height: 50px;
+    text-align: right; 
+    width: 290px;    
+    float:right;
+    margin-bottom:1em;
+}
+.resume
 {
 	background: #FFFFFF;
-	padding: 2em 0em 2em 0em;
+	padding: 1em 0em 1em 0em;
 }
 .wrap{
 	margin:0 auto;
 	width:90%;
-} 
-.description h2 {
+}
+
+.description .resume h2 {
     font: bold 18px/18px 'Oswald';
     color: #ff3300;
-    text-transform:uppercase;
+    text-transform:uppercase;    
     border-bottom: 2px solid #ff3300;          
     height: 25px;
     text-align: right; 
     width: auto;
     float:inherit;}
 
-.description .wrap .items h3 {
+.description .resume .wrap .items h3 {
     font: 14px 'Oswald', Arial, sans-serif;
     color: #202020;    
     float:left;
     text-align:left;}
 
-.description .wrap .items h4 {
+.description .resume .wrap .items h4 {
     font: 12px 'Oswald', Arial, sans-serif;
     color:#202020;    
     text-align: left;
     float:right;}
 
-.description .wrap .items h5 {
+.description .resume .wrap .items h5 {
     font: 12px 'Oswald', Arial, sans-serif;
     color:#202020;
     font-style:italic;
     text-align: left;
     float:left;}
-.description .wrap .items h6 {
+.description .resume .wrap .items h6 {
     font: 12px 'Oswald', Arial, sans-serif;
     color:#202020;    
     text-align: left;
     float:left;}
   
-.description .wrap .items p {
+.description .resume .wrap .items p {
     font: 12px Arial;
     color: #202020;
     /*line-height: 22px;
@@ -932,7 +958,7 @@ div {
     float:left;
     width: 700px;
     text-align: left; }
-.description .wrap .items ul {
+.description .resume .wrap .items ul {
         list-style-image: url(../images/li_check_red.png);
         padding-left: 32px;
         float:left;
@@ -940,7 +966,7 @@ div {
         width:inherit;
         color: #555; }
  
-        .description .wrap .items ul li {  
+        .description .resume .wrap .items ul li {  
             width: 810px;
               }
 
